         expression.c},machine.c,peripherals/{disk/{beta.c,disk.c,opus.c,
         plusd.c,upd_fdc.c,wd_fdc.c},flash/am29f010.c,ide/{divide.c,zxatasp.c,
         zxcf.c},if1.c,if2.c,nic/{enc28j60.c,w5100.c},scld.c,spectranet.c},
         slt.c: remove unneeded "out of memory" error handling (Sergio).
20150315 peripherals/disk/disk.c: use libspectrum_new0 where appropriate
         (Sergio).
20150315 peripherals/nic/w5100_socket.c: initialise sockaddr_in (Sergio).
20150316 compat/win32/socket.c: fix misuse of ARRAY_SIZE (Sergio).
20150316 configure.ac: check for libspectrum before checking for UIs (Stuart).
20150316 configure.ac: check for libspectrum's own GLib replacement (Stuart).
20150316 configure.ac: use real GLib iff libspectrum does and make GTK+ UI
         depend on real GLib (Stuart).
20150316 configure.ac: add missing quotes to AC_MSG_ERROR for GLib (Stuart).
20150316 configure.ac: remove duplicate 'checking for GLib' message (Stuart).
20150316 configure.ac: remove duplicate HAVE_LIB_GLIB definition (Stuart).
20150316 configure.ac: always use -Wwrite-strings when using GCC (Stuart).
20150316 movie.c,screenshot.c: define ZLIB_CONST when including <zlib.h>
         (Stuart).
20150316 fuse.[ch],movie.c,settings.pl,ui/gtk/{debugger.c,gtkinternals.h,
         gtkui.c}: add missing const qualifiers and casts (Stuart).
20150316 ui/xlib/xui.c: add casts to silence warnings (Stuart).
20150316 INSTALL: replace libspectrum's --without-glib with --with-fake-glib
         (Stuart).
20150316 ui/{gtk/debugger.c,widget/debugger.c,win32/debugger.{c,rc}}: show
         the status of the halted flag in the debugger (Stuart).
20150316 z80/{tests/tests.expected,z80.{c,h,pl},z80_checks.h,z80_ops.c}:
         accurate emulation of the HALT instruction (Stuart).
20150317 utils.c: use libspectrum's memory managment in utils_safe_strdup
         (Sergio).
20150317 sound/win32sound.c: don't free static buffers (Sergio).